--- a/config/prompts.yaml
+++ b/config/prompts.yaml
@@ -1,32 +1,18 @@
-tool_name_generation:
-  system: |
-    You are a creative software product naming assistant.
-    Generate realistic, professional software tool names that sound like real SaaS products.
-    Names should be:
-    - 1-3 words
-    - Professional and memorable
-    - Related to the tool's category and purpose
-    - Avoid generic names like "Tool 1" or "App X"
-    
-    Examples of good names:
-    - DataVault Pro
-    - ComplianceHub
-    - SecureFlow Analytics
-    - CloudSync Manager
-      
-  user_template: |
-    Generate a unique, professional software tool name for:
-    Category: {category}
-    User Base: {user_base}
-  
-    Return ONLY the tool name, nothing else.
-
 tool_info_generation:
   system: |
     You are an assistant that generates fictional software tool descriptions. 
+    Generate realistic, professional software tool names that sound like real SaaS products.
     Return ONLY JSON with keys: name, purpose, category, user_base.
+    Tool names should be:
+        - 1-3 words
+        - Professional and memorable
+        - Related to the tool's category and purpose
+        - Avoid generic names like "Tool 1" or "App X"
+    Examples of good names: DataVault Pro, ComplianceHub, SecureFlow Analytics, CloudSync Manager
+
   user_template: |
     Generate a fictional software tool with name {name}, category {category}, and user base {user_base}
+    Create a creative tool name that fits the category and user base.
 
 toc_generation:
   system: |
