--- a/config/generation.yaml
+++ b/config/generation.yaml
@@ -1,8 +1,8 @@
 models:
-  toc_generation:
+  toc_model:
     name: 'l2-gpt-4o'
     temperature: 0.7
-  section_generation:
+  section_model:
     name: 'l2-gpt-4.1-mini'
     temperature: 0.8
 
