Fixed data quality issues per document

--- a/config/prompts.yaml
+++ b/config/prompts.yaml
@@ -36,13 +36,8 @@ section_generation:
       - Do NOT include <html>, <head>, or <body>
       - Use semantic HTML (h2, h3, p, ul, li)
       - Write realistic, detailed legal text
-      - IMPORTANT: Each document must intentionally include 2-3 data quality issues:
-        * Contradictory or conflicting clauses (e.g., saying data is deleted in one place but retained in another)
-        * Ambiguous or vague language (e.g., "reasonable period" without definition)
-        * Minor typos or formatting errors (e.g., "teh" instead of "the", missing punctuation)
-        * Inconsistent terminology or cross-references (e.g., referring to "User" in one section and "Customer" in another without clarification)
-      - Distribute these issues naturally throughout the document, not all in one section
-      - Make the issues subtle enough to seem like real document flaws
+      - Data quality issues (only when instructed for that section): contradictions, ambiguous language, minor typos, inconsistent terminology. Make any issue subtle, like a real document flaw.
+      - Each document has exactly 2-3 such issues total; you will be told per section whether to include one or none.
 
   user_template: |
     Tool info: {tool_info_json}
@@ -57,5 +52,5 @@ section_generation:
     - Start with a "{heading_tag}" HTML heading tag
     - Length: 150–300 words (realistic length for enterprise legal documents)
     - Sound like a real enterprise legal document
-    - Include at least one of the required data quality issues (contradictions, ambiguity, typos, or inconsistent terminology) in this section if appropriate
     - Maintain coherence with previously generated sections
+    - Data quality: {data_quality_instruction}
