--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports
+"scripts/**/*.py" = ["E402"]  # path setup before imports (run as script)
 
 [tool.mypy]
 python_version = "3.11"
